@@ -1,21 +1,21 @@
 package com.microsiervices.order_service.service;
 
+import com.microsiervices.events.InventoryFailedEvent;
+import com.microsiervices.events.InventoryReservedEvent;
 import com.microsiervices.order_service.dao.OrderDao;
-import com.microsiervices.order_service.dto.InventoryResponse;
-import com.microsiervices.order_service.dto.OrderLineItemDto;
 import com.microsiervices.order_service.dto.OrderRequestDto;
+import com.microsiervices.events.OrderCreatedEvent;
 import com.microsiervices.order_service.model.Order;
-import com.microsiervices.order_service.model.OrderLineItem;
+import com.microsiervices.order_service.model.OrderItem;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import org.springframework.kafka.core.KafkaTemplate;
+import org.springframework.kafka.annotation.KafkaListener;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
-import java.util.Arrays;
 import java.util.List;
-import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,56 +24,90 @@ public class OrderService {
 
     private final OrderDao orderDao;
     private final WebClient.Builder webClientBuilder;
-    private final KafkaTemplate<String, String> kafkaTemplate;
-
-    public String testKafka() {
-        kafkaTemplate.send("order-created-topic", "aaaaaaaaaaaaaaa");
-
-        return "asdasdads";
-    }
+    private final KafkaProducerService kafkaProducerService;
 
     public String placeOrder(OrderRequestDto orderRequest) {
         Order order = new Order();
-        order.setOrderNumber(UUID.randomUUID().toString());
+        order.setUserId(orderRequest.getUserId());
+        order.setTotalAmount(orderRequest.getTotalAmount());
 
-        List<OrderLineItem> orderLineItems = orderRequest.getOrderLineItemsDtoList()
-                .stream()
-                .map(this::mapToDto)
-                .toList();
-        order.setOrderLineItems(orderLineItems);
+        List<OrderItem> orderItems = orderRequest.getOrderItems().stream()
+                .map(item -> OrderItem.builder()
+                        .productId(item.getProductId())
+                        .price(item.getPrice())
+                        .quantity(item.getQuantity())
+                        .build()
+                ).collect(Collectors.toList());
+        order.setOrderItems(orderItems);
+        order.setOrderStatus("CREATED");
+        orderDao.save(order);
 
-        List<String> skuCodes = order.getOrderLineItems().stream()
-            .map(OrderLineItem::getSkuCode)
-            .toList();
+        // Publish OrderCreatedEvent to Kafka
 
-        // Call Inventory Service, and place order if product is in stock
+        OrderCreatedEvent orderCreatedEvent = new OrderCreatedEvent();
+        orderCreatedEvent.setOrderId(order.getId());
+        orderCreatedEvent.setOrderItems(orderRequest.getOrderItems());
+        kafkaProducerService.publishOrderCreatedEvent(orderCreatedEvent);
 
-        InventoryResponse[] inventoryResponses = webClientBuilder.build().get()
-            .uri("http://inventory-service/api/inventory",
-                 uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
-            .retrieve()
-            .bodyToMono(InventoryResponse[].class)
-            .block();
+//        Order order = new Order();
+//        order.setOrderNumber(UUID.randomUUID().toString());
+//
+//        List<OrderLineItem> orderLineItems = orderRequest.getOrderLineItemsDtoList()
+//                .stream()
+//                .map(this::mapToDto)
+//                .toList();
+//        order.setOrderLineItems(orderLineItems);
+//
+//        List<String> skuCodes = order.getOrderLineItems().stream()
+//            .map(OrderLineItem::getSkuCode)
+//            .toList();
+//
+//        // Call Inventory Service, and place order if product is in stock
+//
+//        InventoryResponse[] inventoryResponses = webClientBuilder.build().get()
+//            .uri("http://inventory-service/api/inventory",
+//                 uriBuilder -> uriBuilder.queryParam("skuCode", skuCodes).build())
+//            .retrieve()
+//            .bodyToMono(InventoryResponse[].class)
+//            .block();
+//
+//
+//        boolean allProductsInStock = Arrays.stream(inventoryResponses)
+//            .allMatch(InventoryResponse::isInStock);
+//
+//        if(allProductsInStock) {
+//            orderDao.save(order);
+//            return "Order place successfully!!!";
+//        } else {
+//            return "No products in stock!!!";
+//        }
 
+        return "";
+    }
 
-        boolean allProductsInStock = Arrays.stream(inventoryResponses)
-            .allMatch(InventoryResponse::isInStock);
-
-        if(allProductsInStock) {
-            orderDao.save(order);
-            return "Order place successfully!!!";
-        } else {
-            return "No products in stock!!!";
+    @KafkaListener(topics = "inventory-events", groupId = "order-group")
+    public void handleInventoryEvents(Object event) {
+        if (event instanceof InventoryReservedEvent) {
+            InventoryReservedEvent reservedEvent = (InventoryReservedEvent) event;
+//            Order order = orderRepository.findById(reservedEvent.getOrderId()).orElseThrow();
+//            order.setStatus("CONFIRMED");
+//            orderRepository.save(order);
+        } else if (event instanceof InventoryFailedEvent) {
+            InventoryFailedEvent failedEvent = (InventoryFailedEvent) event;
+//            Order order = orderRepository.findById(failedEvent.getOrderId()).orElseThrow();
+//            order.setStatus("CANCELLED");
+//            orderRepository.save(order);
         }
     }
 
-    private OrderLineItem mapToDto(OrderLineItemDto orderLineItemsDto) {
-        OrderLineItem orderLineItems = new OrderLineItem();
-        orderLineItems.setPrice(orderLineItemsDto.getPrice());
-        orderLineItems.setQuantity(orderLineItemsDto.getQuantity());
-        orderLineItems.setSkuCode(orderLineItemsDto.getSkuCode());
-        return orderLineItems;
-    }
+//
+//    private OrderLineItem mapToDto(OrderLineItemDto orderLineItemsDto) {
+//        OrderLineItem orderLineItems = new OrderLineItem();
+//        orderLineItems.setPrice(orderLineItemsDto.getPrice());
+//        orderLineItems.setQuantity(orderLineItemsDto.getQuantity());
+//        orderLineItems.setSkuCode(orderLineItemsDto.getSkuCode());
+//        return orderLineItems;
+//    }
 
     public List<Order> getOrders() {
         return orderDao.findAll();
